book get, create working. Need to eliminate id field in swagger createBook
