# api_gateway/docs/swagger.json
@@ -4,13 +4,41 @@
         "contact": {}
     },
     "paths": {
-        "/books/student/{id}": {
+        "/book/{id}": {
             "get": {
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "Book Related"
+                ],
+                "summary": "Gets details of the Book from User input book ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Book ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/main.Book"
+                        }
+                    }
+                }
+            }
+        },
+        "/books/student/{id}": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Student Book Related"
                 ],
                 "summary": "Retrieves the borrowed books of the student based on given ID",
                 "parameters": [
@@ -41,7 +69,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Course Related"
+                    "Student Course Related"
                 ],
                 "summary": "Retrieves the enrolled courses of the student based on given ID",
                 "parameters": [
@@ -169,7 +197,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Book Related"
+                    "Student Book Related"
                 ],
                 "summary": "Borrows the book of a given Id for a given student ID",
                 "parameters": [
@@ -202,7 +230,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Course Related"
+                    "Student Course Related"
                 ],
                 "summary": "Drop the student of the given Id from the given course(ID)",
                 "parameters": [
@@ -235,7 +263,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Course Related"
+                    "Student Course Related"
                 ],
                 "summary": "Enrolls the student of the given Id to the given course ID",
                 "parameters": [
@@ -268,7 +296,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Book Related"
+                    "Student Book Related"
                 ],
                 "summary": "Hands in the book of a given Id for a given student ID",
                 "parameters": [
